--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ header {
 }
 
 main {
-    margin: 20px 10px;
+    margin: 20px 20px;
 }
 
 h1 {
@@ -43,7 +43,7 @@ h1 {
 }
 
 .photo-section {
-    margin-top: 40px;
+    margin: 40px 0;
 }
 
 .article-img {
@@ -52,4 +52,21 @@ h1 {
 
 .caption {
     font-size: 20px;
+}
+
+.article-body {
+    margin: 40px 0;
+    font-size: 20px;
+}
+
+.main-text {
+    margin: 30px 0;
+}
+
+.highlighted-text {
+    background-color: #fffb00;
+}
+
+.main-list {
+    padding: 10px;
 }
